// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`subpackage playground uni-app build:mp-weixin: uni-app build:mp-weixin common/assets.js 1`] = `
[
  ""/sub/assets/logo-dc.759742f5.png"",
  ""/sub/static/logo.png"",
  ""/sub/static/logo.png"",
  ""/sub/uni_modules/test-component/static/logo-hx.png"",
  ""/sub/uni_modules/test-module/static/logo-hx.png"",
]
`;

exports[`subpackage playground uni-app build:mp-weixin: uni-app build:mp-weixin pages/index/index.wxss 1`] = `
"@import "../../app.wxss";
.test {
    background-color: red;
}"
`;

exports[`subpackage playground uni-app build:mp-weixin: uni-app build:mp-weixin uni_modules/test-module/components/test-component/test-component.wxss 1`] = `
".test {
  background-color: red;
}"
`;

exports[`subpackage playground uni-app build:mp-weixin: uni-app build:mp-weixin uni_modules/test-module/pages/index/index.wxss 1`] = `
"@import "../../../../app.wxss";
.test {
  background-color: red;
}"
`;

exports[`subpackage playground uni-app dev:mp-weixin: uni-app dev:mp-weixin common/assets.js 1`] = `
[
  ""/sub/assets/logo-dc.759742f5.png"",
  ""/sub/static/logo.png"",
  ""/sub/static/logo.png"",
  ""/sub/uni_modules/test-component/static/logo-hx.png"",
  ""/sub/uni_modules/test-module/static/logo-hx.png"",
]
`;

exports[`subpackage playground uni-app dev:mp-weixin: uni-app dev:mp-weixin pages/index/index.wxss 1`] = `
"@import "../../app.wxss";
.test {
    background-color: red;
}"
`;

exports[`subpackage playground uni-app dev:mp-weixin: uni-app dev:mp-weixin uni_modules/test-module/components/test-component/test-component.wxss 1`] = `
".test {
  background-color: red;
}"
`;

exports[`subpackage playground uni-app dev:mp-weixin: uni-app dev:mp-weixin uni_modules/test-module/pages/index/index.wxss 1`] = `
"@import "../../../../app.wxss";
.test {
  background-color: red;
}"
`;

exports[`subpackage playground uni-app-x build:mp-weixin: uni-app-x build:mp-weixin common/assets.js 1`] = `
[
  ""/sub/assets/logo-dc.759742f5.png"",
  ""/sub/static/logo.png"",
  ""/sub/static/logo.png"",
  ""/sub/uni_modules/test-component/static/logo-hx.png"",
  ""/sub/uni_modules/test-module/static/logo-hx.png"",
]
`;

exports[`subpackage playground uni-app-x build:mp-weixin: uni-app-x build:mp-weixin pages/index/index.wxss 1`] = `
"@import "../../app.wxss";
@import "../../uvue.wxss";
:host{display:flex;flex-direction:column}

.test {
    background-color: red;
}"
`;

exports[`subpackage playground uni-app-x build:mp-weixin: uni-app-x build:mp-weixin uni_modules/test-module/components/test-component/test-component.wxss 1`] = `
":host{display:flex;flex-direction:column}

.test {
  background-color: red;
}"
`;

exports[`subpackage playground uni-app-x build:mp-weixin: uni-app-x build:mp-weixin uni_modules/test-module/pages/index/index.wxss 1`] = `
"@import "../../../../app.wxss";
@import "../../../../uvue.wxss";
:host{display:flex;flex-direction:column}

.test {
  background-color: red;
}"
`;

exports[`subpackage playground uni-app-x dev:mp-weixin: uni-app-x dev:mp-weixin common/assets.js 1`] = `
[
  ""/sub/assets/logo-dc.759742f5.png"",
  ""/sub/static/logo.png"",
  ""/sub/static/logo.png"",
  ""/sub/uni_modules/test-component/static/logo-hx.png"",
  ""/sub/uni_modules/test-module/static/logo-hx.png"",
]
`;

exports[`subpackage playground uni-app-x dev:mp-weixin: uni-app-x dev:mp-weixin pages/index/index.wxss 1`] = `
"@import "../../app.wxss";
@import "../../uvue.wxss";
:host{display:flex;flex-direction:column}

.test {
    background-color: red;
}"
`;

exports[`subpackage playground uni-app-x dev:mp-weixin: uni-app-x dev:mp-weixin uni_modules/test-module/components/test-component/test-component.wxss 1`] = `
":host{display:flex;flex-direction:column}

.test {
  background-color: red;
}"
`;

exports[`subpackage playground uni-app-x dev:mp-weixin: uni-app-x dev:mp-weixin uni_modules/test-module/pages/index/index.wxss 1`] = `
"@import "../../../../app.wxss";
@import "../../../../uvue.wxss";
:host{display:flex;flex-direction:column}

.test {
  background-color: red;
}"
`;
